<resources>
    <string name="app_name">Yoogooo Smart Home</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="user_pass">Contraseña</string>
    <string name="btn_login">Iniciar</string>
    <string name="new_user_titu">Nuevo Usuario</string>
    <string name="name_user">Nombre</string>
    <string name="lastName_user">Apellidos</string>
    <string name="email">Email</string>
    <string name="user_nameLogin">Nombre de Usuario</string>
    <string name="user_passLogin">Contraseña</string>
    <string name="register">Registrar</string>
    <string name="addSite">Agregar Recinto</string>
    <string name="name_site">Nombre del recinto</string>
    <string name="btnAdd">Agregar</string>
    <string name="control_name">Nombre del control</string>
    <string name="addControl">Agregar Control</string>
    <string name="voice_ctrl_on">Comando de voz encendido</string>
    <string name="voice_ctrl_off">Comando de voz apagado</string>
    <string name="ip_address">Dirección ip</string>
    <string name="ip_port">Puerto</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="txt_add_site">Agregar locacion</string>
    <string name="addEnclouser">Agregar Sala</string>
    <string name="name_enclouser">Nombre de la Sala</string>
    <string name="txt_channel">Canal de control</string>
    <string name="add_ctrl_on">Comando de voz encendido</string>
    <string name="add_ctrl_off">comandoo de voz apagado</string>
    <string name="add_ctrl_ch">Canal de control</string>
    <string name="updateEnclouser">Actualizar Sala</string>
</resources>
