<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yoogooo.yoogooosmarthome.Login">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:id="@+id/imageView2" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:id="@+id/loginTitu"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        style="@android:style/Widget.DeviceDefault.TextView" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/addUsr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@android:color/holo_green_dark" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/loginTitu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <EditText
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_gravity="center"
                android:id="@+id/txt_user" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:counterMaxLength="16"
            app:counterEnabled="true"
            android:clipToPadding="false"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10sp">

            <EditText
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_pass"
                android:id="@+id/txt_pass"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/btn_login"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:layout_marginTop="20sp" />

    </LinearLayout>
</RelativeLayout>
