<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yoogooo.yoogooosmarthome.UI.Login"
    android:background="@android:color/background_light">


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/addUsr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@android:color/holo_green_dark" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="ContentDescription"
        app:srcCompat="@drawable/logo_static"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/addUsr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="false"
            android:id="@+id/til_email"
            app:errorEnabled="true"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_gravity="center"
                android:id="@+id/txt_user"
                android:autoText="true"
                android:inputType="textEmailAddress"
                style="@style/Widget.AppCompat.AutoCompleteTextView" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:counterMaxLength="16"
            app:counterEnabled="true"
            android:clipToPadding="false"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:id="@+id/til_password"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_pass"
                android:id="@+id/txt_pass"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/btn_login"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:layout_marginTop="20sp" />

    </LinearLayout>
</RelativeLayout>
