<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_control_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yoogooo.yoogooosmarthome.UI.Control_details"
    android:orientation="vertical"
    android:padding="5dp">


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@drawable/ico_addsite"
        android:id="@+id/floatingActionButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_ctrl_d_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_margin="5dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_ctrl_on"
                android:layout_margin="5dp"
                android:id="@+id/txt_ctrl_d_on" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_ctrl_off"
                android:id="@+id/txt_ctrl_d_off" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_ctrl_ch"
                android:layout_margin="5dp"
                android:id="@+id/txt_ctrl_d_channel" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/luz"
                android:id="@+id/img_ctrl_d_type"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/on"
                android:id="@+id/img_ctrl_d_state"
                android:layout_weight="1"
                android:layout_margin="5dp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
